# rust-api-template

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
api/: Cargo.toml
api/src/: lib.rs  test.rs
entity/: Cargo.toml
entity/src/: lib.rs  prelude.rs  test.rs
service/: Cargo.toml
