[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
dotenv = "0.15.0"
entity = { version = "0.1.0", path = "../entity" }
serde = "1.0.204"
serde_json = "1.0.120"
service = { version = "0.1.0", path = "../service" }
tokio = { version = "1.39.1", features = ["full"] }
tower = "0.4.13"
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
